fix for over-stretched images in tooltip at some sites

--- a/less/dialog.less
+++ b/less/dialog.less
@@ -11,7 +11,7 @@
     max-height: 450px;
     overflow: auto;
     font-family: @font-helvetica;
-    font-size: 14px;
+    font-size: 14px !important;
     line-height: 1.42857143;
     color: #333!important;
     box-sizing: border-box;
@@ -28,6 +28,9 @@
         border-right-width: 0px;
         border-bottom-width: 0px;
         border-left-width: 0px;
+        font-size: 14px !important;
+        margin: 0;
+        padding: 0;
 
         td {
           padding: 0;
@@ -64,6 +67,8 @@
       display: inline;
       margin: 0;
       padding: 0;
+      width: 10px!important;
+      height: 16px!important;
     }
 
 }
